<resources>
    <string name="app_name">Clother</string>

    <string name="notification_channel_messages_name">Messages</string>
    <string name="notification_channel_messages_description">Messages from other users</string>

    <string name="action_enable">Enable</string>
    <string name="action_retry">Retry</string>
    <string name="action_okay">Okay</string>
    <string name="action_upload">Upload new image</string>
    <string name="action_remove">Remove</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_new_offer">New offer</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>

    <string name="auth_name">Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_sign_up">Sign up</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_reset_password">Reset password</string>
    <string name="auth_already_signed_up">Already have an account? Sign in</string>
    <string name="auth_forgot_password">Forgot your password?</string>
    <string name="auth_email_occupied">Email is already in use</string>
    <string name="auth_email_not_verified">Email is not confirmed</string>
    <string name="auth_invalid_credentials">Wrong email or password</string>
    <string name="auth_user_not_found">Email doesn\'t exist</string>
    <string name="auth_email_activation_message">To activate your account,
        please follow instructions we sent to\u0020</string>
    <string name="auth_password_reset_message">To reset your password,
        please follow instructions we sent to\u0020</string>
    <string name="auth_your_email">your email address</string>
    <string name="auth_check_inbox">Check your inbox</string>
    <string name="auth_name_requirements">Name should contain at least 2 and less than 50 characters</string>
    <string name="auth_email_invalid">Email address is invalid</string>
    <string name="auth_password_requirements">Password should be a combination of uppercase letters,
        lowercase letters, numbers, and symbols and contain from 8 to 25 characters</string>

    <string name="offer">Offer</string>
    <string name="offer_select_category">Select category</string>
    <string name="offer_create">Create new offer</string>
    <string name="offer_description">Description</string>
    <string name="offer_title">Title</string>
    <string name="offer_pictures">Pictures</string>
    <string name="offer_category">Category</string>
    <string name="offer_size">Size</string>
    <string name="offer_user">Posted by</string>
    <string name="offer_date">Date</string>
    <string name="offer_select_images">Select images</string>
    <string name="offer_attach_limit_exceeded">Cannot attach more than 5 pictures</string>
    <string name="offer_discard_changes_warning">The changes you made will be lost. Are you sure?</string>
    <string name="offer_publish">Publish</string>
    <string name="offer_size_xs">XS</string>
    <string name="offer_size_xl">XL</string>
    <string name="offer_size_l">L</string>
    <string name="offer_size_m">M</string>
    <string name="offer_size_s">S</string>
    <string name="offer_radius_5_km">5 km</string>
    <string name="offer_radius_10_km">10 km</string>
    <string name="offer_radius_25_km">25 km</string>
    <string name="offer_radius_50_km">50 km</string>
    <string name="offer_title_requirement">Offer must have a title</string>
    <string name="offer_image_requirement">Please select at least 1 image</string>
    <string name="offer_details_view">Tap to view</string>
    <string name="offer_created_message">Offer was successfully created</string>
    <string name="offer_delete">Delete offer?</string>
    <string name="offer_deletion_confirmation">Are you sure you want to delete offer? This cannot be undone</string>
    <string name="offer_deleted_message">Offer was successfully deleted</string>

    <string name="search_input_hint">Search on Clother</string>
    <string name="search_nothing_found">Nothing found</string>
    <string name="search_filters">Filters</string>
    <string name="search_apply_filters">Apply filters</string>
    <string name="search_clear_filters">Clear filters</string>
    <string name="search_my_location">My location</string>
    <string name="search_set_location">Set location</string>
    <string name="search_max_distance">Maximum distance</string>

    <string name="chat_input_hint">Message</string>
    <string name="chat_sender_you">You</string>

    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_complete">Let\'s go</string>
    <string name="onboarding_title_1">Welcome to Clother</string>
    <string name="onboarding_description_1">An app which will give your unused clothes a second life. Swap clothes with other people or donate them to those who are in need.</string>
    <string name="onboarding_title_2">Why swap clothes?</string>
    <string name="onboarding_description_2">Climate change is one of the pressing problems of the modern world. Reusing clothes reduces CO<font size="10">2</font> emissions and reduces the amount of energy used to produce new clothes.</string>
    <string name="onboarding_title_3">What\'s next?</string>
    <string name="onboarding_description_3">Create an account and start using Clother. You can post offers, search for other users\' offers using various filters, chat with them using the built-in real-time chat. Let\'s make a\u00A0world\u00A0better\u00A0together!</string>

    <string name="profile_edit">Edit</string>
    <string name="profile_join_date">Signed up %s</string>
    <string name="profile_join_date_today">today</string>
    <string name="profile_join_date_week">last week</string>
    <string name="profile_join_date_month">last month</string>
    <string name="profile_join_date_year">last year</string>
    <string name="profile_join_date_several_years">more than a year ago</string>
    <string name="profile_email">Email: %s</string>
    <string name="profile_status">Status</string>
    <string name="profile_save">Save</string>
    <string name="profile_message">Message</string>
</resources>